--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Self-income management-Ass-5-TR</span> </title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<h1> Test</h1>
-<h1> Test2</h1>
+
 
 <body>
     <header>
         <h1 class="text-5xl text-center mt-16">Self-Income-Management <br> <span
                 class="font-bold text-purple-600">Assignment-5-TR</h1>
     </header>
+    <h1>html setup</h1>
 
 </body>
 
