--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1 class="text-5xl text-center mt-16">Self-Income-Management <br> <span
                 class="font-bold text-purple-600">Assignment-5-TR</h1>
     </header>
-    <h1>html setup</h1>
 
+    <p>calculating my salary expense</p>
 </body>
 
 </html>
